--- a/pom.xml
+++ b/pom.xml
@@ -95,5 +95,15 @@
             <version>${org.slf4j-version}</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>3.2.15.RELEASE</version>
+        </dependency>
     </dependencies>
 </project>
