--- a/pom.xml
+++ b/pom.xml
@@ -105,5 +105,12 @@
             <artifactId>spring-orm</artifactId>
             <version>3.2.15.RELEASE</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-taglibs -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-taglibs</artifactId>
+            <version>3.2.0.RELEASE</version>
+        </dependency>
+
     </dependencies>
 </project>
