--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,30 @@
             <artifactId>spring-security-taglibs</artifactId>
             <version>3.2.0.RELEASE</version>
         </dependency>
-
+        <!--Генерация данных в excel-->
+        <!-- Apache Commons File Upload -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+        </dependency>
+        <!-- Excel view -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>3.12</version>
+        </dependency>
+        <!--Генерация данных в pdf-->
+        <!-- PDF view -->
+        <dependency>
+            <groupId>com.lowagie</groupId>
+            <artifactId>itext</artifactId>
+            <version>2.1.5</version>
+        </dependency>
     </dependencies>
 </project>
